--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <script>
   // Mot de passe JS
-  const PASSWORD = "apvv25";
+  const PASSWORD = "mdp25";
   let attempts = 0;
   const maxAttempts = 3;
 
