--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CODEX - Accueil</title>
+<title>BIOCODEX - Accueil</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
 <header id="top">
-  <h1>CODEX</h1>
+  <h1>BIOCODEX</h1>
   <p>Portail de vos cours et ressources pédagogiques.</p>
   <nav>
     <a href="#botanique">Botanique</a>
@@ -79,7 +79,7 @@
 </main>
 
 <footer>
-  <p>© 2025 CODEX - Tous droits réservés</p>
+  <p>© 2025 BIOCODEX - Tous droits réservés</p>
 </footer>
 
 <script>
@@ -89,7 +89,7 @@
   const maxAttempts = 3;
 
   function checkPassword() {
-    let userInput = prompt("Mot de passe pour accéder au site CODEX :");
+    let userInput = prompt("Mot de passe pour accéder au site BIOCODEX :");
     while(userInput !== PASSWORD && attempts < maxAttempts) {
       attempts++;
       userInput = prompt("Mot de passe incorrect. Réessayez :");
